bin_PROGRAMS = rp3m 
rp3m_SOURCES = rpmain.cpp hash_slot.h hash_slot.cpp rpintf_redis3m.h rpintf_redis3m.cpp 
rp3m_CPPFLAGS = -DRP_USE_REDIS3M
#rpcluster_SOURCES = rpmain.cpp hash_slot.h hash_slot.cpp rpintf_redis_c_cluster.h rpintf_redis_c_cluster.cpp
#rpcluster_CPPFLAGS = -DRP_USE_REDIS_C_CLUSTER
#AM_LDFLAGS = 
